# chatbot-dojo

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  API_REFACTORING_SUMMARY.md  CHANGELOG.md  README.md  docker-compose.dev.yml  docker-compose.yml  makefile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tmux-dev-setup.sh
.github/workflows/: ci.yml
backend/: Dockerfile  conftest.py  entrypoint.celery.sh  entrypoint.dev.sh  entrypoint.prod.sh  manage.py  pyproject.toml  requirements.txt
backend/senseiweb/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/tester/: __init__.py  admin.py  api.py  apps.py  auth_backend.py  forms.py  models.py  senpai.py  senpai_validation.py  serializers.py  urls.py  utils.py  validation_script.py  views.py
backend/tester/api/: __init__.py  auth.py  base.py  connectors.py  conversations.py  errors.py  execution.py  execution_utils.py  execution_views.py  profile_generator.py  project_files.py  projects.py  reports.py  results_processor.py  senpai.py  sensei_execution_views.py  tasks.py  technologies.py  test_cases.py  test_files.py  test_runner.py  tracer_generator.py  tracer_parser.py  tracer_views.py
backend/tester/management/: __init__.py
backend/tester/management/commands/: __init__.py  ensure_superuser.py  fix_tracer_analysis.py  move_tracer_files.py  warmup_senpai_embedding_model.py
backend/tester/migrations/: 0001_initial.py  0002_alter_profilegenerationtask_stage.py  0003_alter_profilegenerationtask_stage.py  0004_alter_personalityfile_file_and_more.py  0005_add_connector_parameters.py  0006_remove_chatbotconnector_link_and_more.py  0007_senseicheckrule.py  0008_migrate_sensei_check_rules_directory.py  0009_move_projects_into_projects_directory.py  0010_create_user_projects_directories.py  0011_senpaiconversation.py  0012_senpaiconversation_assistant_api_key.py  0013_move_user_storage_root_to_users.py  0014_export_existing_connectors_for_senpai.py  0015_remove_legacy_senpai_connector_exports.py  0016_rename_project_folders_to_project_names.py  0017_rename_connector_exports_to_connector_names.py  0018_senpaiconversation_assistant_model.py  0019_senpai_conversation_history.py  0020_tracer_cancellation.py
backend/tester/templates/: results.html  upload.html
backend/tester/templates/yaml/: default.yaml
backend/tester/tests/: __init__.py  test_project_storage.py  test_senpai_api.py  test_senpai_runtime.py
bruno/Chatbot Dojo/: opencollection.yml
bruno/Chatbot Dojo/Test Senpai/: Assign Assistant API Key.yml  Create Assistant OpenAI API Key.yml  Initialize Conversation.yml  List API Keys.yml  Login.yml  Send Message.yml  folder.yml
bruno/Chatbot Dojo/environments/: chatbot-dojo.yml
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  app.jsx  index.css  index.jsx
frontend/src/api/: api-client.js  api-keys-api.js  apiClient.js  apiKeysApi.js  authentication-api.js  authenticationApi.js  chatbot-connector-api.js  chatbot-technology-api.js  chatbotTechnologyApi.js  config.js  conversations-api.js  conversationsApi.js  executeTestsApi.js  file-api.js  fileApi.js  fileFetch.js  fileUpload.js  profile-report-api.js  profileReportApi.js  project-api.js  projectApi.js  reports-api.js  reportsApi.js  senpai-api.js  test-cases-api.js  test-errors-api.js  testCasesApi.js  testErrorsApi.js  testReportApi.js
frontend/src/components/: ApiKeyItem.jsx  CreateProjectModal.jsx  Dashboard.jsx  EditProjectModal.jsx  FileList.jsx  FileUpload.jsx  MyCustomToast.jsx  Navbar.jsx  PrivateRoute.jsx  ProjectList.jsx  TestCasesList.jsx  UserProfileList.jsx  UserProfileManager.jsx  UserProfileUpload.jsx  api-key-item.jsx  create-project-modal.jsx  edit-project-modal.jsx  execution-folder.jsx  execution-logs-viewer.jsx  html-message-renderer.jsx  inline-graph-viewer.jsx  inline-report-viewer.jsx  markdown-message.jsx  my-custom-toast.jsx  original-profiles-viewer.jsx  private-route.jsx  project-list.jsx  senpai-assistant-sidebar.jsx  sensei-check-results-dashboard.jsx  sensei-check-results-modal.jsx  sensei-check-rules.jsx  setup-progress.jsx  setup-status-dashboard.jsx  terminal-output.jsx  test-cases-list.jsx  tracer-execution-card.jsx
frontend/src/constants/: providers.js
frontend/src/contexts/: AuthContext.jsx  MyCustomToastContext.jsx  auth-context.jsx  my-custom-toast-context.jsx  setup-context.jsx
frontend/src/data/: custom-connector-documentation.jsx  sensei-check-documentation.js  yaml-documentation.jsx  yaml-schema.jsx  yamlDocumentation.jsx  yamlSchema.jsx
frontend/src/hooks/: project-handler.js  projectHandlers.js  use-fetch-files.js  use-fetch-projects.js  use-fetch-test-cases.js  use-selected-projects.js  use-yaml-editor.js  useFetchFiles.js  useFetchProjects.js  useFetchTestCases.js  useSelectedProject.js  user-file-handlers.js  userFileHandlers.js
frontend/src/utils/: error-types.js  modern-font.js  sensei-check-results-storage.js  status-labels.js  time-utils.js  yaml-highlighter.js
frontend/src/views/: ChatbotTechnologies.jsx  Dashboard.jsx  Home.jsx  LoginView.jsx  ProjectsDashboard.jsx  SignupView.jsx  TestCase.jsx  UserProfileView.jsx  YamlEditorView.jsx  chatbot-connectors.jsx  chatbot-technologies.jsx  custom-connector-yaml-editor.jsx  dashboard.jsx  home.jsx  login-view.jsx  projects-dashboard.jsx  sensei-check-results-view.jsx  sensei-check-rules-editor.jsx  sensei-dashboard.jsx  setup-guide.jsx  signup-view.jsx  test-case.jsx  tracer-dashboard.jsx  user-profile-view.jsx  yaml-editor-view.jsx
nginx/: nginx.conf  nginx.dev.conf
scripts/: generate_env.py  generate_fernet_key.py
senseiweb/: asgi.py  settings.py  urls.py  wsgi.py
tester/: forms.py  models.py  views.py
tester/management/: __init__.py
tester/management/commands/: __init__.py
tester/migrations/: 0001_initial.py  0002_testfile_execution_time.py
tester/templates/: results.html  upload.html
(+10 files in other folders)
