[project]
name = "sensei-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.30",
    "cryptography>=45.0.3",
    "django>=5.2.2",
    "django-cors-headers>=4.7.0",
    "django-rest-knox>=5.0.2",
    "djangorestframework>=3.16.0",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "knox>=0.1.14",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
    "tiktoken>=0.9.0",
]
